[project]
name = "uusikaupunki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.1",
    "flask>=3.1.0",
    "jsonify>=0.5",
    "pandas>=2.2.3",
    "polars>=1.26.0",
    "pyarrow>=19.0.1",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "ruff>=0.11.2",
]
